--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "phpunit/phpunit": "3.7.*@stable"
     },
     "autoload": {
+        "classmap": [
+            "src/migrations"
+        ],
         "psr-0": {
             "GrahamCampbell\\Queuing": "src/"
         }
