--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.4.7",
         "orchestra/testbench": "~2",
-        "graham-campbell/core": "dev-master",
+        "graham-campbell/core": "0.1.*-alpha",
         "pda/pheanstalk": "2.1.*",
         "aws/aws-sdk-php": "2.4.*",
         "iron-io/iron_mq": "1.4.*"
