--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,11 @@
             "GrahamCampbell\\Queuing": "src/"
         }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-develop": "0.2-dev"
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
