--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.4.7",
-        "orchestra/testbench": "2.1.*",
+        "laravel/framework": "4.1.*",
         "graham-campbell/core": "0.2.*",
         "symfony/event-dispatcher": "2.4.*",
         "guzzle/guzzle": "3.8.*",
@@ -20,8 +20,7 @@
         "iron-io/iron_mq": "1.4.*"
     },
     "require-dev": {
-        "mockery/mockery": "0.8.*",
-        "phpunit/phpunit": "3.7.*"
+        "graham-campbell/testbench": "0.1.*"
     },
     "autoload": {
         "classmap": [
