--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,27 @@
             "email": "graham@mineuk.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "sebastianbergmann/phpcov",
+                "version": "1.1.0",
+                "dist": {
+                    "url": "https://github.com/sebastianbergmann/phpcov/archive/1.1.0.zip",
+                    "type": "zip"
+                },
+                "source": {
+                    "url": "https://github.com/sebastianbergmann/phpcov.git",
+                    "type": "git",
+                    "reference": "1.1.0"
+                },
+                "bin": [
+                    "phpcov.php"
+                ]
+            }
+        }
+    ],
     "require": {
         "php": ">=5.4.7",
         "laravel/framework": "4.1.*",
@@ -27,7 +48,8 @@
             "src/migrations"
         ],
         "psr-0": {
-            "GrahamCampbell\\Queuing": "src/"
+            "GrahamCampbell\\Queuing": "src/",
+            "GrahamCampbell\\Tests\\Queuing": "tests/"
         }
     },
     "extra": {
