--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/framework": "4.1.*",
         "symfony/config": "2.4.*",
         "symfony/filesystem": "2.4.*",
-        "graham-campbell/core": "0.3.*",
+        "graham-campbell/core": "0.3.*"
     },
     "require-dev": {
         "graham-campbell/testbench": "0.3.*",
