--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": ">=5.4.7",
         "laravel/framework": "4.1.*",
         "symfony/config": "2.4.*",
+        "symfony/event-dispatcher": "2.4.*",
         "symfony/filesystem": "2.4.*",
         "graham-campbell/core": "0.3.*"
     },
@@ -22,12 +23,21 @@
         "aws/aws-sdk-php": "2.6.*",
         "iron-io/iron_mq": "1.5.*"
     },
+    "suggest": {
+        "pda/pheanstalk": "Enables the beanstalk connector.",
+        "aws/aws-sdk-php": "Enables the aws connector.",
+        "iron-io/iron_mq": "Enables the iron connector."
+    },
     "autoload": {
         "classmap": [
             "src/migrations"
         ],
         "psr-4": {
-            "GrahamCampbell\\Queuing\\": "src/",
+            "GrahamCampbell\\Queuing\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "GrahamCampbell\\Tests\\Queuing\\": "tests/"
         }
     },
