--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "graham-campbell/queuing",
-    "description": "Queuing Is A Cool Way To Queue In Laravel 4.2+",
+    "description": "Queuing Provides Queuing Performance Increases Laravel 4.2+",
     "keywords": ["laravel", "framework", "queuing", "mail", "email", "cron", "queue", "Queuing", "Laravel Queuing", "Laravel-Queuing", "Graham Campbell", "GrahamCampbell"],
     "license": "Apache-2.0",
     "authors": [
