Re-added the master branch alias

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,11 @@
             "GrahamCampbell\\Tests\\Queuing\\": "tests/"
         }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
